# crawl

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  498.md  AGENTS.md  AndroidAppSettings.cfg  AndroidBuild.sh  AppHdr.h  CHANGELOG.md  CREDITS.txt  CrawlPauseMenu.md  DCSS_AUTOCOMBAT_INTEGRATION_PLAN.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  README.md.original  SECURITY.md  SURVEY.md  VOTES.md  X-Crawl_Philosophy  ashtier.c  biome.json  coord-circle.cc  coord.cc  coord.h  coordit.cc  coordit.h  crawl_manual.rst  debug.h  dgn-voronoi.cc  enum.h  fixedvector.h  main.cc  mt19937ar.cc  package-lock.json  package.json  random.cc  (+7 more)
crawl-ref/: .gitignore  034_changes.txt  AndroidAppSettings.cfg  AndroidBuild.sh  BUILD-cmake.md  CMakeLists.txt  CREDITS  CREDITS.txt  ChangeLog  INSTALL  INSTALL.md  INSTALL.txt  INSTALL_WIN_MINGW.txt  Makefile  README.crawl_ref  README.hexcrawl.txt  README.md  README.stone_soup.txt  README.txt  TODO.hexcrawl.txt  build_nt.txt  dolinks.sh  domake.sh  init.txt  licence.txt  readme.txt  tiles_help.txt  wininit.txt
crawl-ref/.github/workflows/: gettext.yml
crawl-ref/.tx/: config
crawl-ref/debian/: NEWS  changelog  control  copyright  crawl-common.docs  crawl-common.postinst  crawl-tiles.desktop  crawl-tiles.menu  crawl.menu  rules  watch
crawl-ref/docs/: 034_changes.txt  034_command_keys.txt  034_monster_glyphs.txt  ChangeLog.hexcrawl  FAQ.html  aptitudes.txt  arena.txt  buglist.txt  build_nt.txt  changelog.txt  changes.hexcrawl  changes.stone_soup  coding_conventions.txt  crawl-0.5.0-options.txt  crawl-0.5.1-options.txt  crawl.6  crawl.txt  crawl_macros.txt  crawl_manual.addition.txt  crawl_manual.reST  crawl_manual.rst  crawl_manual.txt  crawl_options.txt  fight_simulator.txt  index.html  internationalization.txt  key_changes.txt  keybind.txt  keys.ps  keys.txt  level-design.txt  level_design.txt  lgpl.txt  lualicense.txt  macros_guide.txt  messlog.txt  monster_glyphs.txt  monster_speech.txt  mt19937.txt  options_guide.txt  (+9 more)
crawl-ref/docs/develop/: IRC.txt  android.txt  arena.txt  artefact_creation.md  background_creation.md  background_creation.txt  coding_conventions.md  coding_conventions.txt  contribution-process.md  contribution-process.txt  ctags.txt  dungeon_and_stone_notes.txt  editor_tips.txt  forking_tips.txt  git-aliases.txt  git-config.txt  god_creation.txt  internationalization.txt  keys.txt  level_design.txt  monster_creation.txt  monster_speech.txt  mutation_creation.txt  new_dev_checklist.txt  patch_guide.txt  process.txt  pull_request_guide.txt  release.txt  rng_guidelines.md  save_compatibility.txt  species_creation.md  species_creation.txt  spells.txt  test_plug_and_play_cc.txt  testing.md  testing.txt  tiles_creation.txt  translation.txt
crawl-ref/docs/gooncrawl/: changelog.txt  development_plan.txt  feature_request_list.txt  summary.txt  survey_history.txt  surveyed_features.txt  trunk_merge_procedure.txt
crawl-ref/docs/historical/: spl-data.txt
crawl-ref/docs/license/: lgpl.txt  mt19937.txt
crawl-ref/docs/obsolete/: 034_changes.txt  buglist.txt  changes.340  changes.400  crawlhistory.txt  cut_spells.txt  messlog.txt  spl-data.txt  todo.txt  versions.txt
crawl-ref/docs/template/: apt-tmpl-wide.txt  apt-tmpl.txt
crawl-ref/git-hooks/: README.txt  crawl-ref-cia  crawl-ref-email  git_buildbot.py  post-receive  pre-commit  update
crawl-ref/mac/: 68K_Stub.r  Crawl4.mcp  Precomp (Mac-D).pch++  Precomp (Mac-R).pch++
crawl-ref/settings/: 0.12_monster_glyphs.txt  0.13_monster_glyphs.txt  0.14_monster_glyphs.txt  0.16_monster_glyphs.txt  0.17_monster_glyphs.txt  0.18_monster_glyphs.txt  0.9_monster_glyphs.txt  034_command_keys.txt  034_monster_glyphs.txt  052_monster_glyphs.txt  060_monster_glyphs.txt  071_monster_glyphs.txt  080_monster_glyphs.txt  advanced_optioneering.txt  autopickup_exceptions.txt  colemak_command_keys.txt  dec_glyphs.txt  dolls.txt  dvorak_command_keys.txt  food_colouring.txt  ibm_glyphs.txt  init.txt  menu_colours.txt  messages.txt  neo_command_keys.txt  no_vi_command_keys.txt  old_unicode_glyphs.txt  pickup_butcher_tool.txt  runrest_messages.txt  soundcore.txt  standard_colours.txt  tile_minimap_colours.txt  tiles_options.txt  travel_stoppers.txt  workman_command_keys.txt
crawl-ref/settings/mac/: Crawl profile.terminal
crawl-ref/source/: .clang-format  .gitignore  @  AppHdr.cc  AppHdr.h  CMakeLists.txt  Crawl-Info.plist  FixAry.h  FixVec.h  KeymapContext.h  Kills.cc  Kills.h  MacString.cc  MacString.h  Makefile  SDLMain.h  SDLMain.m  ability - Copy - Copy.cc  ability-type.h  ability.cc  ability.h  abl-show.cc  abl-show.h  abyss.cc  abyss.h  ac-type.h  acquire.cc  acquire.h  acr.cc  acrawl.gdt  act-iter.cc  act-iter.h  activity-interrupt-type.h  actor-los.cc  actor.cc  actor.h  adjust.cc  adjust.h  aptitudes.h  areas.cc  (+1117 more)
crawl-ref/source/Crawl.xcodeproj/: project.pbxproj
crawl-ref/source/MSVC/: .gitignore  CHANGES.txt  Common.props  Common.vsprops  Console.props  Console.vsprops  Debug.vsprops  LICENSE.txt  README.txt  Release.props  Release.vsprops  Tiles.props  Tiles.vsprops  crawl-ref.sln  crawl-ref.vcproj  crawl.vcproj  crawl.vcxproj  crawl.vcxproj.filters  dat.csproj  fresh.bat  gen.bat  lua.vcproj  pcre.vcproj  sqlite.vcproj  tilegen.vcproj  tilegen.vcxproj
crawl-ref/source/MSVC2010/: .gitignore  Common.props  Console.props  README.txt  Release.props  Tiles.props  crawl-ref.sln  crawl.rc  crawl.vcxproj  pointer.asm  prebuild-tiles.bat  prebuild.bat  tilegen.vcxproj
crawl-ref/source/android-project/: AndroidManifest.xml  AndroidManifest.xml.in  build.gradle  local.properties  local.properties.in  settings.gradle
crawl-ref/source/catch2-tests/: catch.hpp  catch_amalgamated.cc  catch_amalgamated.hpp  fixture_lua.cc  fixture_lua.h  init_guards.cc  init_guards.h  test_branch.cc  test_coordit.cc  test_describe.cc  test_english.cc  test_files.cc  test_fixture_lua.cc  test_format.cc  test_items.cc  test_main.cc  test_mon-util.cc  test_ng-init-branches.cc  test_player.cc  test_player_fixture.cc  test_player_fixture.h  test_randbook.cc  test_shopping.cc  test_species.cc  (+8 more)
(+3668 files in other folders)
